--- a/server/package.json
+++ b/server/package.json
@@ -40,6 +40,7 @@
     "node-cmd": "^5.0.0",
     "node-fetch": "^3.3.2",
     "pg": "^8.13.1",
+    "reflect-metadata": "^0.2.2",
     "typedi": "^0.10.0",
     "uuid": "^11.0.5",
     "yargs": "^17.7.2"
@@ -49,6 +50,10 @@
     "@babel/core": "^7.26.7",
     "@babel/eslint-parser": "^7.26.5",
     "@babel/node": "^7.26.0",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.28.0",
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/preset-env": "^7.26.7",
     "@testcontainers/postgresql": "^10.17.1",
     "eslint": "^8.57.1",
