--- a/server/.babelrc
+++ b/server/.babelrc
@@ -6,8 +6,7 @@
     ["@babel/plugin-proposal-decorators", { "legacy": true }],
     ["@babel/plugin-proposal-class-properties", { "loose": true }],
     ["@babel/plugin-transform-private-methods", { "loose": true }],
-  ["@babel/plugin-transform-private-property-in-object", { "loose": true }],
-  ["@babel/plugin-proposal-metadata"]
+  ["@babel/plugin-transform-private-property-in-object", { "loose": true }]
   ],
   "sourceMaps": "inline",
   "retainLines": true
